# scheduler

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
config/: example_config.yaml
outputs/: .gitignore
src/scheduler/: __init__.py  __main__.py  cli.py  config.py  exam.py  exam_proctor.py  input.py  main.ipynb  path.py  planner.py  prep_data.py  proctor.py  simulator.py  utils.py
tests/: cli_test.py  config_parser_test.py  conftest.py  utils_test.py
